@@ -21,6 +21,9 @@ Trunk (unreleased changes)
  5. HADOOP-358.  Fix a NPE bug in Path.equals().
     (Frédéric Bertin via cutting)
 
+ 6. HADOOP-327.  Fix ToolBase to not call System.exit() when
+    exceptions are thrown.  (Hairong Kuang via cutting)
+
 
 Release 0.4.0 - 2006-06-28
 
